Iterate through instances instead of using parameters